stream api test