@@ -8,11 +8,11 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <maven.compiler.source>24</maven.compiler.source>
-        <maven.compiler.target>24</maven.compiler.target>
-        <junit.version>5.9.2</junit.version>
-        <assertj.version>3.24.2</assertj.version>
-        <eclipse-collections.version>11.1.0</eclipse-collections.version>
+        <maven.compiler.source>25</maven.compiler.source>
+        <maven.compiler.target>25</maven.compiler.target>
+        <junit.version>5.13.4</junit.version>
+        <assertj.version>3.27.4</assertj.version>
+        <eclipse-collections.version>13.0.0</eclipse-collections.version>
         <guava.version>33.4.8-jre</guava.version>
     </properties>
 
@@ -47,4 +47,20 @@
             <version>${assertj.version}</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.14.0</version> <!-- Use a recent version -->
+                <configuration>
+                    <release>25</release>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
